Fix spacing on testimonial page

--- a/scss/sections/_page-content.scss
+++ b/scss/sections/_page-content.scss
@@ -87,7 +87,7 @@
         margin:30px 0 80px;
         .quotation{
             border-top:1px solid $gray;
-            padding:50px 0 40px;
+            padding:40px 0 30px;
             &:last-child{
                 border-bottom:1px solid $gray;
             }
